package.json update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "bhanu_portfolio",
   "homepage": "https://bhanubediya.github.io/bhanu_portfolio",
   "version": "0.1.0",
   "private": false,
